# accelerated-drift

./: .gitignore  README.md  config.toml  config_external.toml  config_mini.toml  example.env  get_top_delta_results.sh  main.py  pyproject.toml  slurm_analyze_gpu.sh  slurm_analyze_mini_gpu.sh  slurm_visualize.sh  slurm_visualize_mini.sh  top15_its_table_rows.tex  top20_its_table_rows.tex
docs/: ARCHITECTURE.md  RESEARCH_PLAN.md  TODO.md  VISUALS_AND_ANALYSIS.md
documents/: ARCHITECTURE.md  RESEARCH_PLAN.md  VISUALS_AND_ANALYSIS.md  field_log.md
logs/: analysis_2758405.err  analysis_2758405.out  analysis_2758623.err  analysis_2758623.out  analysis_2928573.err  analysis_2929412.err  analysis_2929412.out  analysis_2929691.err  analysis_2930061.err  analysis_2930549.err  analysis_2930549.out  analysis_2953073.err  analysis_2953073.out  analysis_2954808.err  analysis_2954808.out  analysis_2955536.err  analysis_2955536.out  analysis_2961989.err  analysis_2962027.err  analysis_2962027.out  analysis_2985000.err  analysis_2985000.out  analysis_gpu_4185496.err  analysis_gpu_4185496.out  analysis_gpu_4186377.err  analysis_gpu_4186377.out  analysis_gpu_4310398.err  analysis_gpu_4310398.out  analysis_gpu_4315151.err  analysis_gpu_4316000.err  analysis_gpu_4316000.out  analysis_gpu_4323259.err  analysis_gpu_4333959.err  analysis_gpu_4353829.err  analysis_gpu_4353829.out  analysis_gpu_4377724.err  analysis_gpu_4384564.err  analysis_gpu_4384564.out  analysis_gpu_4390060.err  analysis_gpu_4390060.out  (+65 more)
notebooks/: HC3.ipynb  MAGE.ipynb  create_mini_datasets.ipynb  data_analysis.ipynb  (+2 more)
(+245 files in other folders)
