[project]
name = "not-an-llm"
version = "0.1.0"
description = "Collect Semantic Scholar papers and analyze writing-feature shifts around LLM adoption"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "tqdm>=4.67.3",
]

[project.scripts]
not-an-llm = "not_an_llm.cli:main"
