[project]
name = "not-an-llm"
version = "0.1.0"
description = "Collect Semantic Scholar papers and analyze writing-feature shifts around LLM adoption"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets==2.21.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "ruptures>=1.1.10",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.14",
    "statsmodels>=0.14.6",
    "textstat>=0.7.13",
    "tqdm>=4.67.3",
]

[project.scripts]
not-an-llm = "not_an_llm.cli:main"
